--- a/P02-UnscentedKalmanFilter/CMakeLists.txt
+++ b/P02-UnscentedKalmanFilter/CMakeLists.txt
@@ -14,9 +14,12 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 include_directories(/usr/local/include)
 include_directories(/usr/local/opt/openssl/include)
+include_directories(./../resources)
+include_directories(./../resources/include)
 link_directories(/usr/local/lib)
 link_directories(/usr/local/opt/openssl/lib)
 link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
+link_directories(./../resources/lib)
 
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
